#82-store gpkg and show it on frontend
